--- a/alpine/alpine.html
+++ b/alpine/alpine.html
@@ -10,5 +10,9 @@
 </head>
 
 	<body>
+    <div x-data="{ count: 0 }">
+      <button @click="count++">Klicka mig</button>
+      <p>Antal klick: <span x-text="count"></span></p>
+  </div>
 	</body>
 </html>
