css filer + namn
skapat css filer till vardera variant av webbplatserna skapat ett namn

--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -6,9 +6,10 @@
   <meta charset="UTF-8">
   <script src="java.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="baselinestyle.css">
 </head>
 
 	<body>
+    <h1>Hälsokompassen</h1>
 	</body>
 </html>
