--- a/alpine/alpine.html
+++ b/alpine/alpine.html
@@ -6,10 +6,11 @@
   <meta charset="UTF-8">
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet" href="alpinestyle.css">
 </head>
 
 	<body>
+    <h1 x-data="{ message: 'Hälsokompassen' }" x-text="message"></h1>
     <div x-data="{ count: 0 }">
       <button @click="count++">Klicka mig</button>
       <p>Antal klick: <span x-text="count"></span></p>
