--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -9,7 +9,55 @@
   <link rel="stylesheet" href="baselinestyle.css">
 </head>
 
-	<body>
-    <h1>Hälsokompassen</h1>
-	</body>
+<nav class="sidebar">
+  <a href="#">Boka tid</a>
+
+  <div class="dropdown">
+    <button class="dropdown-btn">Bokningar ▼</button>
+    <div class="dropdown-menu">
+        <a href="#">Se bokningar</a>
+        <a href="#">Avboka</a>
+    </div>
+</div>
+
+<div class="dropdown">
+    <button class="dropdown-btn">Olika sjukdomar ▼</button>
+    <div class="dropdown-menu">
+        <a href="#">Virus</a>
+        <a href="#">Muskelvärk</a>
+        <a href="#">Förkylning</a>
+        <a href="#">Allergi</a>
+    </div>
+</div>
+
+<a href="#">Förnya recept</a>
+<a href="#">Skaffa läkarintyg</a>
+
+<div class="dropdown">
+  <button class="dropdown-btn">Våra vårdcentraler ▼</button>
+  <div class="dropdown-menu">
+      <a href="#">Skövde</a>
+      <a href="#">Göteborg</a>
+      <a href="#">Stockholm</a>
+      <a href="#">Malmö</a>
+  </div>
+</div>
+
+<div class="dropdown">
+  <button class="dropdown-btn">Kontakta oss ▼</button>
+  <div class="dropdown-menu">
+      <a href="#">Mail</a>
+      <a href="#">Chatta</a>
+      <a href="#">Telefon</a>
+  </div>
+</div>
+
+<a href="#">Om oss</a>
+</nav>
+
+<!-- Huvudinnehåll -->
+<div class="content">
+<h1>Välkommen till Vårdkompassen</h1>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum, maiores omnis. Quo mollitia, ab facere eos assumenda magni ea nam nulla possimus necessitatibus dignissimos doloribus ad sint laboriosam nihil. Voluptas!</p>
+</div>
 </html>
