--- a/alpine/alpine.html
+++ b/alpine/alpine.html
@@ -1,73 +1,72 @@
 <!DOCTYPE html>
 <html lang="sv">
 
-  <head>
+<head>
     <title>Alpine.js</title>
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="alpinestyle.css">
-  </head>
+</head>
 
-  <body>
-    <h1 x-data="{ message: 'Hälsokompassen' }" x-text="message"></h1>
-    <nav class="nav">
-      <div x-data="{ open: false }" class="dropdown">
-        <button @click="open = !open">Boka tid ▼</button>
-        <div x-show="open" @click.away="open = false" class="dropdown-menu">
-          <a href="#">Tjänster</a>
-          <a href="#">Blogg</a>
-          <a href="#">Support</a>
+<body>
+
+    <!-- Vänster Navigeringsbar -->
+    <nav class="sidebar">
+        <a href="#">Boka tid</a>
+
+        <div class="dropdown" x-data="{ open: false }">
+            <button class="dropdown-btn" @mouseenter="open = true" @mouseleave="open = false">Bokningar ▼</button>
+            <div class="dropdown-menu" x-show="open" x-transition>
+                <a href="#">Se bokningar</a>
+                <a href="#">Avboka</a>
+            </div>
         </div>
-      </div>
-      <div x-data="{ open: false }" class="dropdown">
-        <button @click="open = !open">Bokningar ▼</button>
-        <div x-show="open" @click.away="open = false" class="dropdown-menu">
-          <a href="#">Tjänster</a>
-          <a href="#">Blogg</a>
-          <a href="#">Support</a>
+
+        <div class="dropdown" x-data="{ open: false }">
+            <button class="dropdown-btn" @mouseenter="open = true" @mouseleave="open = false">Olika sjukdomar ▼</button>
+            <div class="dropdown-menu" x-show="open" x-transition>
+                <a href="#">Virus</a>
+                <a href="#">Muskelvärk</a>
+                <a href="#">Förkylning</a>
+                <a href="#">Allergi</a>
+            </div>
         </div>
-      </div>
-      <div x-data="{ open: false }" class="dropdown">
-        <button @click="open = !open">Förnya recept ▼</button>
-        <div x-show="open" @click.away="open = false" class="dropdown-menu">
-          <a href="#">Tjänster</a>
-          <a href="#">Blogg</a>
-          <a href="#">Support</a>
+
+        <a href="#">Förnya recept</a>
+        <a href="#">Skaffa läkarintyg</a>
+
+        <div class="dropdown" x-data="{ open: false }">
+            <button class="dropdown-btn" @mouseenter="open = true" @mouseleave="open = false">Våra vårdcentraler ▼</button>
+            <div class="dropdown-menu" x-show="open" x-transition>
+                <a href="#">Skövde</a>
+                <a href="#">Göteborg</a>
+                <a href="#">Stockholm</a>
+                <a href="#">Malmö</a>
+            </div>
         </div>
-      </div>
-      <div x-data="{ open: false }" class="dropdown">
-        <button @click="open = !open">Olika sjukdomar ▼</button>
-        <div x-show="open" @click.away="open = false" class="dropdown-menu">
-          <a href="#">Tjänster</a>
-          <a href="#">Blogg</a>
-          <a href="#">Support</a>
+
+        <div class="dropdown" x-data="{ open: false }">
+            <button class="dropdown-btn" @mouseenter="open = true" @mouseleave="open = false">Kontakta oss ▼</button>
+            <div class="dropdown-menu" x-show="open" x-transition>
+                <a href="#">Mail</a>
+                <a href="#">Chatta</a>
+                <a href="#">Telefon</a>
+            </div>
         </div>
-      </div>
-      <div x-data="{ open: false }" class="dropdown">
-        <button @click="open = !open">Få ett läkarintyg ▼</button>
-        <div x-show="open" @click.away="open = false" class="dropdown-menu">
-          <a href="#">Tjänster</a>
-          <a href="#">Blogg</a>
-          <a href="#">Support</a>
-        </div>
-      </div>
-      <div x-data="{ open: false }" class="dropdown">
-        <button @click="open = !open">Våra vårdcentraler ▼</button>
-        <div x-show="open" @click.away="open = false" class="dropdown-menu">
-          <a href="#">Tjänster</a>
-          <a href="#">Blogg</a>
-          <a href="#">Support</a>
-        </div>
-      </div>
-      <div x-data="{ open: false }" class="dropdown">
-        <button @click="open = !open">Kontakta oss ▼</button>
-        <div x-show="open" @click.away="open = false" class="dropdown-menu">
-          <a href="#">Tjänster</a>
-          <a href="#">Blogg</a>
-          <a href="#">Support</a>
-        </div>
-      </div>
+
+        <a href="#">Om oss</a>
     </nav>
-  </body>
+
+    <!-- Huvudinnehåll -->
+    <div class="content">
+        <h1>Välkommen till Vårdkompassen</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum, maiores omnis. Quo mollitia, ab facere eos assumenda magni ea nam nulla possimus necessitatibus dignissimos doloribus ad sint laboriosam nihil. Voluptas!</p>
+    </div>
+
+</body>
+
 </html>
+
+
+
