--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -6,12 +6,13 @@
     <meta charset="UTF-8">
     <script src="java.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="baselinestyle.css">
+    <link rel="stylesheet" href="baselinestyle.css"/>
   </head>
 
   <body onload="setupHistory(); showpage('hem', false); checkLocalStorage();">
 
     <div id="banner">
+      <img class="explore" src="explore_60dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
       <h3>Vårdkompassen</h3>
     </div>
 
