--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -21,7 +21,7 @@
         <button onclick="showpage('bokatid', true);"><img class="schedule" src="icons/schedule_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/><p>Boka tid</p></button>
         
         <div class="dropdown">
-          <button class="dropdown-btn" onclick="showpage('bokningar', true);" onmouseover="showDropdown('bokningar-menu')" onmouseout="hideDropdown('bokningar-menu')">Bokningar ▼</button>
+          <button class="dropdown-btn" onclick="showpage('bokningar', true);" onmouseover="showDropdown('bokningar-menu')" onmouseout="hideDropdown('bokningar-menu')"><img class="calender" src="icons/calendar_month_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/>Bokningar ▼</button>
           <div class="dropdown-menu" id="bokningar-menu" onmouseover="showDropdown('bokningar-menu')" onmouseout="hideDropdown('bokningar-menu')">
             <a href="#" onclick="showpage('sebokadetider', true);">Se bokade tider</a>
             <a href="#" onclick="showpage('avokatid', true);">Avboka tid</a>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="dropdown">
-          <button class="dropdown-btn" onclick="showpage('olikasjukdomar', true);" onmouseover="showDropdown('olikasjukdomar-menu')" onmouseout="hideDropdown('olikasjukdomar-menu')">Olika sjukdomar ▼</button>
+          <button class="dropdown-btn" onclick="showpage('olikasjukdomar', true);" onmouseover="showDropdown('olikasjukdomar-menu')" onmouseout="hideDropdown('olikasjukdomar-menu')"><img class="microbiology" src="icons/microbiology_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/>Olika sjukdomar ▼</button>
           <div class="dropdown-menu" id="olikasjukdomar-menu" onmouseover="showDropdown('olikasjukdomar-menu')" onmouseout="hideDropdown('olikasjukdomar-menu')">
             <a href="#" onclick="showpage('virus', true);">Virus</a>
             <a href="#" onclick="showpage('muskelvark', true);">Muskelvärk</a>
@@ -39,11 +39,11 @@
           </div>
         </div>
 
-      <button onclick="showpage('fornyarecept', true);"><p>Förnya recept</p></button>
-      <button onclick="showpage('skaffalakarintyg', true);"><p>Skaffa läkarintyg</p></button>
+      <button onclick="showpage('fornyarecept', true);"><img class="prescriptions" src="icons/prescriptions_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/><p>Förnya recept</p></button>
+      <button onclick="showpage('skaffalakarintyg', true);"><img class="medicalinformation" src="icons/medical_information_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/><p>Skaffa läkarintyg</p></button>
 
       <div class="dropdown">
-        <button class="dropdown-btn" onclick="showpage('vardcentraler', true);" onmouseover="showDropdown('vardcentraler-menu')" onmouseout="hideDropdown('vardcentraler-menu')">Våra vårdcentraler ▼</button>
+        <button class="dropdown-btn" onclick="showpage('vardcentraler', true);" onmouseover="showDropdown('vardcentraler-menu')" onmouseout="hideDropdown('vardcentraler-menu')"><img class="addlocation" src="icons/add_location_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/>Våra vårdcentraler ▼</button>
         <div class="dropdown-menu" id="vardcentraler-menu" onmouseover="showDropdown('vardcentraler-menu')" onmouseout="hideDropdown('vardcentraler-menu')">
           <a href="#" onclick="showpage('skovde', true);">Skövde</a>
           <a href="#" onclick="showpage('goteborg', true);">Göteborg</a>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="dropdown">
-        <button class="dropdown-btn" onclick="showpage('kontakta', true);" onmouseover="showDropdown('kontakta-menu')" onmouseout="hideDropdown('kontakta-menu')">Kontakta oss ▼</button>
+        <button class="dropdown-btn" onclick="showpage('kontakta', true);" onmouseover="showDropdown('kontakta-menu')" onmouseout="hideDropdown('kontakta-menu')"><img class="permphone" src="icons/perm_phone_msg_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/>Kontakta oss ▼</button>
         <div class="dropdown-menu" id="kontakta-menu" onmouseover="showDropdown('kontakta-menu')" onmouseout="hideDropdown('kontakta-menu')">
           <a href="#" onclick="showpage('mail', true);">Mail</a>
           <a href="#" onclick="showpage('chatta', true);">Chatta</a>
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <button onclick="showpage('omoss', true);"><p>Om oss</p></button>
+      <button onclick="showpage('omoss', true);"><img class="groups" src="icons/groups_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/><p>Om oss</p></button>
     </div>
 
     <div id="hem" class="page">
