--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -12,8 +12,15 @@
   <body onload="setupHistory(); showpage('hem', false); checkLocalStorage();">
 
     <div id="banner">
-      <img class="explore" src="icons/explore_60dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
-      <h3>Vårdkompassen</h3>
+      <div class="bannertext">
+        <img class="explore" src="icons/explore_60dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+        <h3>Vårdkompassen</h3>
+      </div>
+      <div class="bannericon">
+        <img class="sync" src="icons/sync_alt_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+        <img class="person" src="icons/person_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+        <img class="search" src="icons/search_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+      </div>
     </div>
 
     <div id="navbar">
