--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -17,9 +17,18 @@
         <h3>Vårdkompassen</h3>
       </div>
       <div class="bannericon">
-        <img class="sync" src="icons/sync_alt_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
-        <img class="person" src="icons/person_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
-        <img class="search" src="icons/search_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+        <div class="icon-container">
+          <img class="sync" src="icons/sync_alt_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+          <span>Personal</span>
+        </div>
+        <div class="icon-container">
+          <img class="person" src="icons/person_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+          <span>Logga in</span>
+        </div>
+        <div class="icon-container">
+          <img class="search" src="icons/search_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg"/>
+          <span>Sök</span>
+        </div>
       </div>
     </div>
 
