lägger till page
håller på att lägga till sidor för underrubrikerna

--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -58,6 +58,7 @@
       <button onclick="showpage('fornyarecept', true);"><img class="prescriptions" src="icons/prescriptions_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/><p>Förnya recept</p></button>
       <button onclick="showpage('skaffalakarintyg', true);"><img class="medicalinformation" src="icons/medical_information_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/><p>Skaffa läkarintyg</p></button>
 
+      <!--VÅRA VÅRDCENTRALER-->
       <div class="dropdown">
         <button class="dropdown-btn" onclick="showpage('vardcentraler', true);" onmouseover="showDropdown('vardcentraler-menu')" onmouseout="hideDropdown('vardcentraler-menu')"><img class="addlocation" src="icons/add_location_32dp_890C26_FILL0_wght400_GRAD0_opsz40.svg"/>Våra vårdcentraler ▼</button>
         <div class="dropdown-menu" id="vardcentraler-menu" onmouseover="showDropdown('vardcentraler-menu')" onmouseout="hideDropdown('vardcentraler-menu')">
@@ -125,8 +126,16 @@
       </div>
     </div>
 
+<!--VÅRA VÅRDCENTRALER-->
     <div id="vardcentraler" class="page">
       <h1>Våra vårdcentraler</h1>
+      <div class="text">
+        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus corrupti ab rerum, a sequi voluptas fugiat nam quis sit harum fuga qui nihil voluptatibus soluta explicabo porro quae beatae vitae.</h2>
+      </div>
+    </div>
+
+    <div id="skovde" class="page">
+      <h1>Skövde Vårdcentral</h1>
       <div class="text">
         <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus corrupti ab rerum, a sequi voluptas fugiat nam quis sit harum fuga qui nihil voluptatibus soluta explicabo porro quae beatae vitae.</h2>
       </div>
