försäker lägga till sidor
håller på att försöka lägga till mer sidor

--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -149,11 +149,9 @@
       </div>
     </div>
 
-    <div id="skovde" class="page">
-      <h1>Skövde Vårdcentral</h1>
-      <div class="text">
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus corrupti ab rerum, a sequi voluptas fugiat nam quis sit harum fuga qui nihil voluptatibus soluta explicabo porro quae beatae vitae.</h2>
-      </div>
+    <div id="skovde" class="page" style="display: none;">
+      <h1>Vårdcentral Skövde</h1>
+      <p>Information om vårdcentralen i Skövde...</p>
     </div>
 
     <!--KONTAKT PAGE-->
@@ -204,6 +202,7 @@
       function setupHistory(){ 
         window.onpopstate = function(event) { historyChange(event); };
       }
+         
     </script>
 
   </body>
