--- a/alpine/alpine.html
+++ b/alpine/alpine.html
@@ -9,125 +9,159 @@
     <link rel="stylesheet" href="alpinestyle.css">
 </head>
 
-<body x-data="{ page: window.location.hash ? window.location.hash.substring(1) : 'hem', highContrast: false }"
-    x-bind:class="{'high-contrast': highContrast}">
-    <!-- Banner -->
-    <div id="banner">
-        <div class="bannertext">
-            <img class="explore" src="icons/explore_60dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
-            <h3>Vårdkompassen</h3>
-        </div>
-        <div class="bannericon">
-            <div class="icon-container">
-                <img class="sync" src="icons/sync_alt_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
-                <span>Personal</span>
-            </div>
-            <div class="icon-container">
-                <img class="person" src="icons/person_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
-                <span>Logga in</span>
-            </div>
-            <div class="icon-container">
-                <img class="search" src="icons/search_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
-                <span>Sök</span>
-            </div>
-        </div>
-    </div>
+    <body
+        x-data="{ page: 'hem', highContrast: false }"
+        x-init="window.location.hash = ''; window.addEventListener('hashchange', () => {page = window.location.hash ? window.location.hash.substring(1) : 'hem';});"
+        x-bind:class="{ 'high-contrast': highContrast }">
 
-    <!-- Navigeringsmeny -->
-    <nav class="sidebar">
-        <button @click="page = 'bokatid'; window.location.hash = 'bokatid'">Boka tid</button>
-
-        <!-- Dropdown för bokningar -->
-        <div class="dropdown" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-            <button class="dropdown-btn">Bokningar ▼</button>
-            <div class="dropdown-menu" x-show="open" x-transition x-cloak>
-                <button class="dropdown-item" @click="page = 'sebokadetider'; window.location.hash = 'sebokadetider'">Se bokningar</button>
-                <button class="dropdown-item" @click="page = 'avokatid'; window.location.hash = 'avokatid'">Avboka</button>
+        <!-- Banner -->
+        <div id="banner">
+            <div class="bannertext">
+                <img class="explore" src="icons/explore_60dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
+                <h3>Vårdkompassen</h3>
             </div>
-        </div>
-
-        <!-- Dropdown för olika sjukdomar -->
-        <div class="dropdown" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-            <button class="dropdown-btn">Olika sjukdomar ▼</button>
-            <div class="dropdown-menu" x-show="open" x-transition x-cloak>
-                <button class="dropdown-item" @click="page = 'virus'; window.location.hash = 'virus'">Virus</button>
-                <button class="dropdown-item" @click="page = 'muskelvark'; window.location.hash = 'muskelvark'">Muskelvärk</button>
-                <button class="dropdown-item" @click="page = 'forkylning'; window.location.hash = 'forkylning'">Förkylning</button>
-                <button class="dropdown-item" @click="page = 'allergi'; window.location.hash = 'allergi'">Allergi</button>
-            </div>
-        </div>
-
-        <!-- Dropdown för vårdcentraler -->
-        <div class="dropdown" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-            <button class="dropdown-btn">Våra vårdcentraler ▼</button>
-            <div class="dropdown-menu" x-show="open" x-transition x-cloak>
-                <button class="dropdown-item" @click="page = 'skovde'; window.location.hash = 'skovde'">Skövde</button>
-                <button class="dropdown-item" @click="page = 'goteborg'; window.location.hash = 'goteborg'">Göteborg</button>
-                <button class="dropdown-item" @click="page = 'stockholm'; window.location.hash = 'stockholm'">Stockholm</button>
-                <button class="dropdown-item" @click="page = 'malmo'; window.location.hash = 'malmo'">Malmö</button>
-            </div>
-        </div>
-
-        <button @click="page = 'omoss'; window.location.hash = 'omoss'">Om oss</button>
-        <button class="btnkontrast" @click="highContrast = !highContrast">
-            <span x-text="highContrast ? 'Återställ standardvy' : 'Aktivera högkontrast'"></span>
-        </button>
-    </nav>
-
-    <!-- Huvudinnehåll -->
-    <div class="contentpage">
-        <div x-data="{ showDetails: false, isHighlighted: false }" x-show="page === 'hem'">
-            <h1>Välkommen till Vårdkompassen</h1>
-        
-            <!-- Knapp för att visa/dölja information -->
-            <button class="btnvisa-dolj" @click="showDetails = !showDetails">
-                <span x-text="showDetails ? 'Dölj information' : 'Mer information'"></span>
-            </button>
-        
-            <!-- Området som visas/döljs -->
-            <div x-show="showDetails" x-transition>
-                <div class="details">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum ipsa quae nihil repellendus quisquam...
-                    </p>
+            <div class="bannericon">
+                <div class="icon-container">
+                    <img class="sync" src="icons/sync_alt_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
+                    <span>Personal</span>
+                </div>
+                <div class="icon-container">
+                    <img class="person" src="icons/person_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
+                    <span>Logga in</span>
+                </div>
+                <div class="icon-container">
+                    <img class="search" src="icons/search_56dp_FFF_FILL0_wght400_GRAD0_opsz48.svg" />
+                    <span>Sök</span>
                 </div>
             </div>
         </div>
 
+        <!-- Navigeringsmeny -->
+        <nav class="sidebar">
+            <button @click="window.location.hash = 'bokatid'">Boka tid</button>
 
-        <div x-show="page === 'bokatid'">
-            <h1>Boka Tid</h1>
+            <!-- Dropdown för bokningar -->
+            <div class="dropdown" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                <button class="dropdown-btn">Bokningar ▼</button>
+                <div class="dropdown-menu" x-show="open" x-transition x-cloak>
+                    <button class="dropdown-item" @click="window.location.hash = 'sebokadetider'">Se bokningar</button>
+                    <button class="dropdown-item" @click="window.location.hash = 'avokatid'">Avboka</button>
+                </div>
+            </div>
+
+            <!-- Dropdown för olika sjukdomar -->
+            <div class="dropdown" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                <button class="dropdown-btn">Olika sjukdomar ▼</button>
+                <div class="dropdown-menu" x-show="open" x-transition x-cloak>
+                    <button class="dropdown-item" @click="window.location.hash = 'virus'">Virus</button>
+                    <button class="dropdown-item" @click="window.location.hash = 'muskelvark'">Muskelvärk</button>
+                    <button class="dropdown-item" @click="window.location.hash = 'forkylning'">Förkylning</button>
+                    <button class="dropdown-item" @click="window.location.hash = 'allergi'">Allergi</button>
+                </div>
+            </div>
+
+            <!-- Dropdown för vårdcentraler -->
+            <div class="dropdown" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                <button class="dropdown-btn">Våra vårdcentraler ▼</button>
+                <div class="dropdown-menu" x-show="open" x-transition x-cloak>
+                    <button class="dropdown-item" @click="window.location.hash = 'skovde'">Skövde</button>
+                    <button class="dropdown-item" @click="window.location.hash = 'goteborg'">Göteborg</button>
+                    <button class="dropdown-item" @click="window.location.hash = 'stockholm'">Stockholm</button>
+                    <button class="dropdown-item" @click="window.location.hash = 'malmo'">Malmö</button>
+                </div>
+            </div>
+
+            <button @click="window.location.hash = 'omoss'">Om oss</button>
+
+            <button class="btnkontrast" @click="highContrast = !highContrast">
+                <span x-text="highContrast ? 'Återställ standardvy' : 'Aktivera högkontrast'"></span>
+            </button>
+        </nav>
+
+        <!-- Huvudinnehåll -->
+        <div class="contentpage">
+
+            <!-- Startsida (hem) -->
+            <div x-show="page === 'hem'" x-data="{ showDetails: false, isHighlighted: false }">
+                <h1>Välkommen till Vårdkompassen</h1>
+            </div>
+
+            <!-- Boka tid -->
+            <div x-show="page === 'bokatid'">
+                <div x-data="{ showDetails: false, isHighlighted: false }">
+                    <h1>Boka Tid</h1>
+
+                    <div :class="isHighlighted ? 'highlighted' : 'normal'">
+                        <p>
+                            Astma är en sjukdom som påverkar luftvägarna<br>
+                            och kan orsaka andnöd, hosta och pipande andning.
+                        </p>
+                    </div>
+
+                    <button class="btnvisa" @click="showDetails = !showDetails">
+                        <span x-text="showDetails ? 'Dölj detaljer' : 'Läs mer'"></span>
+                    </button>
+
+                    <div x-show="showDetails" x-transition x-cloak>
+                        <div class="details">
+                            <p>
+                                Astma orsakas av inflammation i luftvägarna,<br>
+                                vilket gör att luftflödet minskar.<br>
+                                Astma kan behandlas med mediciner som<br>
+                                bronkodilatorer och kortikosteroider.<br>
+                                För att lindra symtom är det viktigt att<br>
+                                undvika triggers som rökning och allergener.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div x-show="page === 'sebokadetider'">
+                <h1>Se Bokade Tider</h1>
+            </div>
+
+            <div x-show="page === 'avokatid'">
+                <h1>Avboka Tid</h1>
+            </div>
+
+            <div x-show="page === 'virus'">
+                <h1>Virus</h1>
+            </div>
+
+            <div x-show="page === 'muskelvark'">
+                <h1>Muskelvärk</h1>
+            </div>
+
+            <div x-show="page === 'forkylning'">
+                <h1>Förkylning</h1>
+            </div>
+
+            <div x-show="page === 'allergi'">
+                <h1>Allergi</h1>
+            </div>
+
+            <div x-show="page === 'skovde'">
+                <h1>Vårdcentral Skövde</h1>
+            </div>
+
+            <div x-show="page === 'goteborg'">
+                <h1>Vårdcentral Göteborg</h1>
+            </div>
+
+            <div x-show="page === 'stockholm'">
+                <h1>Vårdcentral Stockholm</h1>
+            </div>
+
+            <div x-show="page === 'malmo'">
+                <h1>Vårdcentral Malmö</h1>
+            </div>
+
+            <div x-show="page === 'omoss'">
+                <h1>Om Oss</h1>
+            </div>
         </div>
 
-        <div x-show="page === 'sebokadetider'">
-            <h1>Se Bokade Tider</h1>
-        </div>
-
-        <div x-show="page === 'avokatid'">
-            <h1>Avboka Tid</h1>
-        </div>
-
-        <div x-show="page === 'skovde'">
-            <h1>Vårdcentral Skövde</h1>
-        </div>
-
-        <div x-show="page === 'goteborg'">
-            <h1>Vårdcentral Göteborg</h1>
-        </div>
-
-        <div x-show="page === 'stockholm'">
-            <h1>Vårdcentral Stockholm</h1>
-        </div>
-
-        <div x-show="page === 'malmo'">
-            <h1>Vårdcentral Malmö</h1>
-        </div>
-
-        <div x-show="page === 'omoss'">
-            <h1>Om Oss</h1>
-        </div>
-    </div>
-
-</body>
+    </body>
 
 </html>
